# alertmanager-k8s-operator

./: .gitignore  .wokeignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  INTEGRATING.md  README.md  RELEASE.md  SECURITY.md  actions.yaml  charmcraft.yaml  charms.just  ci.ignorelist  config.yaml  justfile  metadata.yaml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.snapshot  requirements.txt  run_tests  tox.ini
.github/: .jira_sync_config.yaml  renovate.json5
.github/workflows/: ci.yaml  codeql-analysis.yml  issues.yaml  issues.yml  mutation-testing.yaml  pull-request-old.yaml  pull-request.yaml  release-edge.yaml  release.yaml  run_tests.yaml
lib/charms/alertmanager-k8s/v1/: consumer.py
lib/charms/alertmanager_k8s/v0/: alertmanager.py  alertmanager_dispatch.py  alertmanager_remote_configuration.py  alertmanager_remote_configurer.py  consumer.py
lib/charms/alertmanager_k8s/v1/: alertmanager_dispatch.py  consumer.py
lib/charms/catalogue_k8s/v1/: catalogue.py
lib/charms/certificate_transfer_interface/v1/: certificate_transfer.py
lib/charms/compound_status/v0/: compound_status.py
lib/charms/grafana_k8s/v0/: grafana_dashboard.py
lib/charms/istio_beacon_k8s/v0/: service_mesh.py
lib/charms/karma_k8s/v0/: karma.py  karma_dashboard.py
lib/charms/loki_k8s/v1/: loki_push_api.py
lib/charms/observability_libs/v0/: cert_handler.py  cert_manager.py  kubernetes_compute_resources_patch.py
lib/charms/observability_libs/v1/: cert_handler.py
lib/charms/prometheus_k8s/v0/: prometheus_scrape.py
lib/charms/tempo_coordinator_k8s/v0/: tracing.py
lib/charms/tls_certificates_interface/v2/: tls_certificates.py
lib/charms/tls_certificates_interface/v4/: tls_certificates.py
lib/charms/traefik_k8s/v2/: ingress.py
src/: alertmanager.py  alertmanager_client.py  charm.py  charm_helpers.py  config.py  config_builder.py  config_utils.py  consumer.py  kubernetes_service.py  provider.py  utils.py  workload_manager.py
src/grafana_dashboards/: alertmanager_rev4.json.tmpl  alertmanager_rev5.json.tmpl
src/k6_tests/: const_vus.js
src/prometheus_alert_rules/: alertmanager_configuration_reload_failure.rule  alertmanager_missing.rule  alertmanager_notifications_failed.rule  heartbeat.rule
terraform/: .tfdocs-config.yml  README.md  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  versions.tf
tests/: dummy.py  helpers.py  test_alertmanager_client.py  test_charm.py  test_config.py  test_consumer.py  test_provider.py  test_utils.py
tests/integration/: am_config.yaml  conftest.py  helpers.py  test_charm.py  test_config_changed_modifies_file.py  test_external_url.py  test_grafana_source.py  test_ingress_with_traefik.py  test_kubectl_delete.py  test_logging.py  test_persistence.py  test_remote_configuration.py  test_remote_configurer.py  test_rerelate_alertmanager_dispatch.py  test_rerelate_alertmanager_dispatch_metrics_endpoint.py  test_rescale_charm.py  test_resource_limits.py  test_templates.py  test_tls_web.py  test_update_status_pressure.py  test_upgrade_charm.py  test_workload_tracing_http.py  test_workload_tracing_tls.py
tests/integration/features/: alerting.feature  grafana_source.feature  high_availability.feature  ingress.feature  karma.feature  log_forwarding.feature  persistence.feature  remote_configuration.feature  resilience.feature  self_monitoring.feature  templates.feature  tls.feature  upgrade.feature  workload_tracing.feature  workload_tracing_http.feature  workload_tracing_tls.feature
tests/integration/remote_configuration_tester/: charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml
tests/integration/remote_configuration_tester/lib/charms/alertmanager_k8s/v0/: alertmanager_remote_configuration.py
tests/integration/remote_configuration_tester/src/: charm.py
tests/integration/remote_configurer_tester/: metadata.yaml  requirements.txt
tests/integration/remote_configurer_tester/lib/charms/alertmanager_k8s/v0/: alertmanager_remote_configurer.py
tests/integration/remote_configurer_tester/src/: charm.py
tests/integration_lma/: test_lma_bundle.py
tests/manual/: bundle_1_e2e_tls.yaml
tests/scenario/: conftest.py  helpers.py  test_brute_isolated.py  test_scrape_jobs.py  test_server_scheme.py  test_something.py  test_transition_to_https.py
tests/unit/: conftest.py  helpers.py  test_alertmanager.py  test_alertmanager_client.py  test_brute_isolated.py  test_charm.py  test_charm_helpers.py  test_config.py  test_config_changes.py  test_consumer.py  test_external_url.py  test_kubernetes_service.py  test_log_forwarding.py  test_push_config_to_workload_on_startup.py  test_remote_configuration.py  test_remote_configuration_provider.py  test_remote_configuration_requirer.py  test_remote_configurer.py  test_scrape_jobs.py  test_self_scrape_jobs.py  test_server_scheme.py  test_utils.py  test_workload_tracing.py
tests/unit/aaa/: test_config_changed_modifies_file.py  test_external_url.py  test_rerelate_alertmanager_dispatch_metrics_endpoint.py  test_upgrade_charm.py
tests/unit/charm/: test_push_config_to_workload_on_startup.py
tests/unit/test_config/: alertmanager.yml  alertmanager_invalid.yml  alertmanager_with_templates.yml  test_templates.tmpl
