[project]
name = "alertmanager-operator"
description = "Kubernetes charm for Alertmanager"
license = "Apache 2.0"
readme = "README.md"
python = "^3.8"
homepage = "https://charmhub.io/alertmanager-k8s"
repository = "https://github.com/canonical/alertmanager-operator"
documentation = "https://charmhub.io/alertmanager-k8s/docs"

[tool.coverage.run]
branch = true
source = ["src", "lib/charms/alertmanager_k8s"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
per-file-ignores = [
    # D100 Missing docstring in public module
    # D101 Missing docstring in public class
    # D102 Missing docstring in public method
    # D103 Missing docstring in public function
    "tests/*:D100,D101,D102,D103"
]
docstring-convention = "google"
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"

[tool.isort]
profile = "black"

[tool.mypy]
pretty = true
python_version = 3.8
mypy_path = "$MYPY_CONFIG_FILE_DIR/src:$MYPY_CONFIG_FILE_DIR/lib:$MYPY_CONFIG_FILE_DIR/tests/unit"
follow_imports = "normal"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
# Enable PEP 420 packages
namespace_packages = true
# Have mypy locate packages without any __init__.py
explicit_package_bases = true
check_untyped_defs = true
allow_redefinition = true

# Ignore libraries that do not have type hint nor stubs, to avoid errors such as:
# error: Skipping analyzing "ops.charm": found module but no type hints or library stubs  [import]
[[tool.mypy.overrides]]
module = ["ops.*", "kubernetes.*", "flatten_json.*"]
ignore_missing_imports = true
